@@ -4,6 +4,10 @@ Changelog
 1.4.4 - unreleased
 ------------------
 
+- Link integrity broke copy&paste of content items.
+  This fixes http://dev.plone.org/plone/ticket/12206.
+  [gotcha]
+
 - Provide Archetypes-only fallback if `plone.uuid` is not available,
   restoring compatibility with Plone 4.0.x.
   [witsch]
